[package]
name = "env-sync"
version = "0.1.0"
edition = "2024"
description = "Easily update your local env file with a git-trackable file"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anotherempty/env-sync"
documentation = "https://docs.rs/env-sync"
readme = "README.md"
categories = ["command-line-utilities", "config", "development-tools"]

[lib]
name = "env_sync"
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.16"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
tempfile = "3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
